fix: fix horizontal scroll bar for 390px

--- a/src/style.css
+++ b/src/style.css
@@ -977,6 +977,10 @@ video {
   max-width: 20rem;
 }
 
+.max-w-\[195px\] {
+  max-width: 195px;
+}
+
 .shrink-0 {
   flex-shrink: 0;
 }
@@ -991,6 +995,10 @@ video {
 
 .basis-auto {
   flex-basis: auto;
+}
+
+.basis-1\/2 {
+  flex-basis: 50%;
 }
 
 .-translate-x-1\/2 {
@@ -1072,6 +1080,10 @@ video {
           user-select: none;
 }
 
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .flex-row {
   flex-direction: row;
 }
@@ -1102,6 +1114,10 @@ video {
 
 .justify-start {
   justify-content: flex-start;
+}
+
+.justify-end {
+  justify-content: flex-end;
 }
 
 .justify-center {
@@ -1179,8 +1195,17 @@ video {
   row-gap: 1.5rem;
 }
 
+.gap-x-1 {
+  -moz-column-gap: 0.25rem;
+       column-gap: 0.25rem;
+}
+
 .self-start {
   align-self: flex-start;
+}
+
+.self-center {
+  align-self: center;
 }
 
 .overflow-hidden {
@@ -1238,6 +1263,18 @@ video {
   border-top-width: 1px;
 }
 
+.border-l {
+  border-left-width: 1px;
+}
+
+.border-l-0 {
+  border-left-width: 0px;
+}
+
+.border-r {
+  border-right-width: 1px;
+}
+
 .border-solid {
   border-style: solid;
 }
@@ -1280,6 +1317,11 @@ video {
 .border-stone-300 {
   --tw-border-opacity: 1;
   border-color: rgb(214 211 209 / var(--tw-border-opacity));
+}
+
+.border-gray-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
 }
 
 .bg-amber-200 {
@@ -1361,6 +1403,11 @@ video {
 
 .bg-white\/100 {
   background-color: rgb(255 255 255 / 1);
+}
+
+.bg-green-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
 
 .bg-contain {
@@ -1975,6 +2022,11 @@ video {
   background-color: rgb(255 255 255 / 0.5);
 }
 
+.hover\:bg-green-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
+}
+
 .hover\:text-blue-300:hover {
   --tw-text-opacity: 1;
   color: rgb(147 197 253 / var(--tw-text-opacity));
@@ -2046,6 +2098,10 @@ video {
   opacity: 1;
 }
 
+.data-\[small\=true\]\:h-8[data-small=true] {
+  height: 2rem;
+}
+
 .data-\[default\=true\]\:bg-blue-50[data-default=true] {
   --tw-bg-opacity: 1;
   background-color: rgb(239 246 255 / var(--tw-bg-opacity));
@@ -2057,6 +2113,34 @@ video {
 
 .group\/reg[data-registered=true] .group-data-\[registered\=true\]\/reg\:block {
   display: block;
+}
+
+.group\/addresses[data-have-default=true] .group-data-\[have-default\=true\]\/addresses\:block {
+  display: block;
+}
+
+.group\/buttons[data-error=true] .group-data-\[error\=true\]\/buttons\:block {
+  display: block;
+}
+
+.group\/buttons[data-success=true] .group-data-\[success\=true\]\/buttons\:block {
+  display: block;
+}
+
+.group\/profile[data-edit=false] .group-data-\[edit\=false\]\/profile\:flex {
+  display: flex;
+}
+
+.group\/edit[data-edit=true] .group-data-\[edit\=true\]\/edit\:flex {
+  display: flex;
+}
+
+.group\/profile[data-edit=true] .group-data-\[edit\=true\]\/profile\:flex {
+  display: flex;
+}
+
+.group\/edit[data-edit=true] .group-data-\[edit\=true\]\/edit\:hidden {
+  display: none;
 }
 
 @media (max-width: 320px) {
@@ -2080,6 +2164,10 @@ video {
 
   .sm\:w-\[525px\] {
     width: 525px;
+  }
+
+  .sm\:max-w-\[195px\] {
+    max-width: 195px;
   }
 }
 
@@ -2249,6 +2337,11 @@ video {
          column-gap: 1.5rem;
   }
 
+  .md\:gap-x-3 {
+    -moz-column-gap: 0.75rem;
+         column-gap: 0.75rem;
+  }
+
   .md\:whitespace-nowrap {
     white-space: nowrap;
   }
@@ -2259,6 +2352,10 @@ video {
 
   .md\:rounded-xl {
     border-radius: 0.75rem;
+  }
+
+  .md\:rounded-lg {
+    border-radius: 0.5rem;
   }
 
   .md\:border {
@@ -2276,6 +2373,10 @@ video {
 
   .md\:border-b-0 {
     border-bottom-width: 0px;
+  }
+
+  .md\:border-r-0 {
+    border-right-width: 0px;
   }
 
   .md\:border-gray-400 {
@@ -2309,6 +2410,11 @@ video {
   .md\:py-6 {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
+  }
+
+  .md\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
   .md\:pb-0 {
@@ -2511,6 +2617,10 @@ video {
   }
 
   .group\/profile[data-have-default=true] .lg\:group-data-\[have-default\=true\]\/profile\:visible {
+    visibility: visible;
+  }
+
+  .group\/addresses[data-have-default=true] .lg\:group-data-\[have-default\=true\]\/addresses\:visible {
     visibility: visible;
   }
 }
